fix for bug #159995

crash when cancelling print / print preview of news messages with attachments.

also, when print / print preview of news messages, attachments don't show.

r/sr=bienvenu, a=sspitzer